refaktorálás: StrUtils helper osztály bevezetése, Employee modell változás role => role_code ; Order::status attrib (szöveges státusz meghatározás)

--- a/lang/hu.json
+++ b/lang/hu.json
@@ -1,6 +1,14 @@
 {
     "Page not found.": "Az oldal nem található.",
-    ":category is invalid as a subcategory category." : "A(z) :parent nem érvényes szülő kategória.",
+    ":category is invalid as a subcategory category.": "A(z) :parent nem érvényes szülő kategória.",
     ":category cannot be subcategory if it has children category already.": "A(z) :parent nem lehet alkategória, ha már vannak gyerekei.",
-    "Invalid main category: :parent.": "Érvénytelen fő kategória: :parent"
+    "Invalid main category: :parent.": "Érvénytelen fő kategória: :parent",
+    "pending": "feldolgozás alatt",
+    "in progress": "készül",
+    "ready": "elkészült",
+    "served": "felszolgálva",
+    "paid": "fizetve",
+    "waiter": "pincér",
+    "bartender": "bárpultos",
+    "backoffice": "backoffice"
 }
