--- a/lang/hu.json
+++ b/lang/hu.json
@@ -10,5 +10,15 @@
     "paid": "fizetve",
     "waiter": "pincér",
     "bartender": "bárpultos",
-    "backoffice": "backoffice"
+    "backoffice": "backoffice",
+    "Verify Email Address": "Ellenőrizze az email címét",
+    "If you did not create an account, no further action is required.": "Ha nem ön hozta létre a fiókot, további teendő nem szükséges.",
+    "Reset Password Notification": "Jelszó visszaállítási értesítés",
+    "You are receiving this email because we received a password reset request for your account.": "Ezt az emailt azért kapja, mert kaptunk egy jelszó visszaállítási kérést a fiókjához.",
+    "Reset Password": "Jelszó visszaállítása",
+    "This password reset link will expire in :count minutes.": "Ez a jelszó visszaállítási link lejár :count perc múlva.",
+    "If you did not request a password reset, no further action is required.": "Ha nem kért jelszó visszaállítást, további teendő nem szükséges.",
+    "If you're having trouble clicking the \":actionText\" button, copy and paste the URL below\ninto your web browser:": "Ha gondot jelent a \":actionText\" gombra való kattintás, másolja és illessze be az alábbi URL-t\na webböngészőjébe:",
+    "Regards": "Üdvözlettel",
+    "All rights reserved.": "Minden jog fenntartva."
 }
