--- a/lang/hu.json
+++ b/lang/hu.json
@@ -11,7 +11,7 @@
     "waiter": "pincér",
     "bartender": "bárpultos",
     "backoffice": "backoffice",
-    "Verify Email Address": "Ellenőrizze az email címét",
+    "Verify Email Address": "Email cím ellenőrzése",
     "If you did not create an account, no further action is required.": "Ha nem ön hozta létre a fiókot, további teendő nem szükséges.",
     "Reset Password Notification": "Jelszó visszaállítási értesítés",
     "You are receiving this email because we received a password reset request for your account.": "Ezt az emailt azért kapja, mert kaptunk egy jelszó visszaállítási kérést a fiókjához.",
@@ -20,5 +20,6 @@
     "If you did not request a password reset, no further action is required.": "Ha nem kért jelszó visszaállítást, további teendő nem szükséges.",
     "If you're having trouble clicking the \":actionText\" button, copy and paste the URL below\ninto your web browser:": "Ha gondot jelent a \":actionText\" gombra való kattintás, másolja és illessze be az alábbi URL-t\na webböngészőjébe:",
     "Regards": "Üdvözlettel",
-    "All rights reserved.": "Minden jog fenntartva."
+    "All rights reserved.": "Minden jog fenntartva.",
+    "Please click the button below to verify your email address.": "Kérjük, kattintson az alábbi gombra az e-mail címének megerősítéséhez."
 }
