DrinkCategory::parents - csak a főkategóriások; Validálás: GuestController+EmplyoeeController EmployeeController::roles - érvényes szerepek; GuestController::updatePassword  - jelszóváltoztatás (aktuális jelszóval); DrinkUnit - unit_code - mértékegység kód Employee modell - a középső név (második név)  opcionális (nullable)

--- a/lang/hu.json
+++ b/lang/hu.json
@@ -8,6 +8,7 @@
     "ready": "elkészült",
     "served": "felszolgálva",
     "paid": "fizetve",
+    "none": "nincs",
     "waiter": "pincér",
     "bartender": "bárpultos",
     "backoffice": "backoffice",
@@ -22,5 +23,9 @@
     "Regards": "Üdvözlettel",
     "All rights reserved.": "Minden jog fenntartva.",
     "Please click the button below to verify your email address.": "Kérjük, kattintson az alábbi gombra az e-mail címének megerősítéséhez.",
-    "We have received your request. If there is an unconfirmed registration associated with the provided email address, we have sent a confirmation email. Please check your inbox, including the spam or promotions folder.": "Kérésedet rögzítettük. Ha a megadott email címhez tartozik aktiválatlan regisztráció, elküldtünk egy megerősítő emailt. Kérjük, ellenőrizd a beérkező leveleidet, beleértve a spam vagy promóciós mappát is."
+    "We have received your request. If there is an unconfirmed registration associated with the provided email address, we have sent a confirmation email. Please check your inbox, including the spam or promotions folder.": "Kérésedet rögzítettük. Ha a megadott email címhez tartozik aktiválatlan regisztráció, elküldtünk egy megerősítő emailt. Kérjük, ellenőrizd a beérkező leveleidet, beleértve a spam vagy promóciós mappát is.",
+    "Only a main category can be a parent.": "Csak főkategória lehet szülő.",
+    "A category cannot be parent of itself.": "Kategória nem lehet saját maga szülője.",
+    "(and :count more error)": "(és további :count hiba)",
+    "(and :count more errors)": "(és további :count hiba)"
 }
